Add HTML and CSS for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
 
     <link
@@ -15,7 +21,24 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
+    <main>
+      <div class="container">
+        <div class="qr-card">
+          <img
+            src="images/image-qr-code.png"
+            alt="qr code"
+            class="qr-card__img"
+          />
+
+          <h1 class="qr-card__title">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="qr-card__text">
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
