--- a/index.html
+++ b/index.html
@@ -22,23 +22,21 @@
   </head>
   <body>
     <main>
-      <div class="container">
-        <div class="qr-card">
-          <img
-            src="images/image-qr-code.png"
-            alt="qr code"
-            class="qr-card__img"
-          />
+      <section class="qr-card">
+        <img
+          src="images/image-qr-code.png"
+          alt="QR code that links to Frontend Mentor website"
+          class="qr-card__img"
+        />
 
-          <h1 class="qr-card__title">
-            Improve your front-end skills by building projects
-          </h1>
-          <p class="qr-card__text">
-            Scan the QR code to visit Frontend Mentor and take your coding
-            skills to the next level
-          </p>
-        </div>
-      </div>
+        <h1 class="qr-card__title">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="qr-card__text">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </section>
     </main>
   </body>
 </html>
